[package]
name = "rose-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = [
    "gtk_v4_10",
    "v1_4",
] }
async-channel = "2.1.1"
gtk = { version = "0.7.3", package = "gtk4" }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread"] }
